--- a/CategoricalEDA/LandEDA.Rmd
+++ b/CategoricalEDA/LandEDA.Rmd
@@ -19,9 +19,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-AmesHouesingDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv"))
+#AmesHouesingDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv"))
 
-#AmesHouesingDataFrame <- read.csv("C:/Users/Joey/Desktop/stat project/AmesHousePricing/train.csv")
+AmesHouesingDataFrame <- read.csv("C:/Users/Joey/Desktop/stat project/AmesHousePricing/train.csv")
 
 #AmesHouesingDataFrame <- read.csv("C:/Users/nicol/OneDrive/Desktop/train1.csv")
 
@@ -66,4 +66,50 @@ AmesHouesingDataFrameLotArea %>% ggplot(aes(x = LogLotArea, y = LogSalePrice, co
 
 fit = lm(LogSalePrice~LogLotArea, data = AmesHouesingDataFrameLotArea)
 summary(fit)
+```
+
+
+```{r}
+# Numerical Encoding so that we can explore correlation for LOT VAR
+
+AmesHouesingDataFrame$LotShapeNum <- as.numeric(factor(AmesHouesingDataFrame$LotShape,
+                                                        levels = c("Reg", "IR1", "IR2", "IR3"),
+                                                        labels = c(4,3,2,1), ordered = TRUE))
+
+AmesHouesingDataFrame$LandContourNum <- as.numeric(factor(AmesHouesingDataFrame$LandContour,
+                                                        levels = c("Lvl", "Bnk", "HLS", "Low"),
+                                                        labels = c(4,3,2,1), ordered = TRUE))
+
+AmesHouesingDataFrame$LotConfigNum <- as.numeric(factor(AmesHouesingDataFrame$LotConfig,
+                                                         levels = c("Inside",
+                                                                    "Corner",
+                                                                    "CulDSac","FR2",
+                                                                    "FR3"),
+                                                         labels = c(5,4,3,2,1), ordered = TRUE))
+
+AmesHouesingDataFrame$LandSlopeNum <- as.numeric(factor(AmesHouesingDataFrame$LandSlope,
+                                                     levels = c("Gtl", "Mod", "Sev"),
+                                                     labels = c(3,2,1),
+                                                     ordered = TRUE))
+```
+
+```{r}
+# setting up the correlation plot for creating mega variables - LOT
+
+# selecting var for exploration:
+lot_corr <- c("LogSalePrice", "LogLotArea", "LotShapeNum",
+               "LandContourNum", "LotConfigNum", "LandSlopeNum")
+
+# getting the rows for each of the vars to be explored:
+lot_df <- AmesHouesingDataFrame[, lot_corr]
+lot_df <- cor(lot_df)
+glimpse(lot_df)
+# plotting corr plot with ggcorrplot
+ggcorrplot(corr = lot_df, lab = TRUE, lab_size = 3,
+           colors = c("#6D9EC1", "white", "#E46726")) +
+  labs(title = "Correlation Between Sales Price and Lot Features", 
+       subtitle = "Netural and Positive Correlation") +
+  theme(plot.title = element_text(hjust = .5),
+        plot.subtitle = element_text(hjust = .5))
+
 ```
