--- a/CategoricalEDA/PorchEDA.Rmd
+++ b/CategoricalEDA/PorchEDA.Rmd
@@ -25,9 +25,9 @@ library(dplyr)
 ```
 
 ```{r}
-AmesHouesingDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv"))
+#AmesHouesingDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv"))
 
-#AmesHouesingDataFrame <- read.csv("C:/Users/Joey/Desktop/stat project/AmesHousePricing/train.csv")
+AmesHouesingDataFrame <- read.csv("C:/Users/Joey/Desktop/stat project/AmesHousePricing/train.csv")
 
 #AmesHouesingDataFrame <- read.csv("C:/Users/nicol/OneDrive/Desktop/train1.csv")
 
@@ -41,6 +41,34 @@ AmesHouesingDataFrame$LogX3SsnPorch = log(AmesHouesingDataFrame$X3SsnPorch + 1)
 AmesHouesingDataFrame$LogScreenPorch = log(AmesHouesingDataFrame$ScreenPorch + 1)
 
 AmesHouesingDataFrame
+```
+
+```{r}
+# cor plot
+# Feature engineer an overall porch value from the columns:
+#    WoodDeckSF - requires log transformation
+#    OpenPorchSF - requires log transformation
+#    EnclosedPorch - DOES NOT require log transformation
+#    X3SsnPorch - requires log transformation but doesn't have a significant p value
+#    ScreenPorch - requires log transformation
+
+# selecting var for exploration:
+porch_corr <- c("LogSalePrice", "EnclosedPorch", "LogScreenPorch",
+                "LogOpenPorchSF", "LogWoodDeckSF")
+
+# getting the rows for each of the vars to be explored:
+porch_df <- AmesHouesingDataFrame[, porch_corr]
+porch_df <- cor(porch_df)
+glimpse(porch_df)
+# plotting corr plot with ggcorrplot
+ggcorrplot(corr = porch_df, lab = TRUE, lab_size = 3,
+           colors = c("#6D9EC1", "white", "#E46726")) +
+  labs(title = "Correlation Between Sales Price and Porch Features", 
+       subtitle = "Netural and Positive Correlation") +
+  theme(plot.title = element_text(hjust = .5),
+        plot.subtitle = element_text(hjust = .5))
+
+
 ```
 
 ```{r}
