--- a/HousingPricesModelTemplate.Rmd
+++ b/HousingPricesModelTemplate.Rmd
@@ -274,3 +274,101 @@ AmesHouesingDataFrame$LandSlopeNum <- as.numeric(factor(AmesHouesingDataFrame$La
 
 
 ```
+
+```{r}
+First Model
+```{r}
+
+# bringing in some of the feats for trial in model...
+# still using basic stuff. 
+model_var <- c('SalePrice', 
+                'OverallQual','OverallCond','YearBuilt','ExterCond2',
+                'TotalBsmtSF','HeatingQC2', 
+                'CentralAir2','BedroomAbvGr','KitchenAbvGr',
+                'TotRmsAbvGrd','Fireplaces',
+                'GarageArea','OpenPorchSF',#'PoolArea','GrLivArea', "LogX1stFlrSF", "LogX2ndFlrSF""LogPoolArea",
+                 'YrSold', "LogGrLivArea","LogTotalBsmtSF",
+               "LogWoodDeckSF","LogOpenPorchSF","LogX3SsnPorch","LogScreenPorch",
+               "LogLotArea","LogLotFrontage","LogGarageArea","LogMasVnrArea"
+               )
+
+
+lr_model <- home_train_vars[,model_var]
+lr_model$lSalePrice <- log(lr_model$SalePrice)
+
+set.seed(4)
+train.index <- sample(c(1:dim(lr_model)[1]), dim(lr_model)[1]*0.8)
+lr_model_train <- lr_model[train.index,]
+lr_model_test <- lr_model[-train.index,]
+
+home_regression <- lm(lSalePrice~.-SalePrice, data = lr_model_train)
+summary(home_regression)
+
+# note "response" this will give you numerical result min/1stq /median/mean/3rd q/ max/ NA's
+pred1 <- predict(home_regression, lr_model_test, type = "response")
+# summary(pred1)
+
+residuals <- lr_model_test$lSalePrice - pred1
+
+home_regression_pred <- data.frame("Predicted" = pred1, "Actual" = lr_model_test$lSalePrice, "Residual" = residuals)
+
+# returns ME-RMSE-MAE-MPE-MAPE
+accuracy(pred1, lr_model_test$lSalePrice)
+
+
+# note "predict" this returns fit/lwr/upr
+pred2 <- predict(home_regression, interval = "predict", newdata = lr_model_test) 
+# summary(pred2)
+
+stargazer(home_reg, type = 'text')
+
+car::vif(home_reg)
+ #comment out so we don't hang up the console with time
+# ols_step_both_p(home_reg, prem = .05, details = TRUE)
+```
+
+
+
+Second Model 
+```{r}
+# adjusted vars to use in model after above:
+
+adj_var <- c("OverallQual", "LogGrLivArea","YearBuilt","LogLotArea",
+             "OverallCond","TotalBsmtSF","GarageArea","Fireplaces",
+             "HeatingQC2","KitchenAbvGr","LogScreenPorch","BedroomAbvGr",
+             "LogWoodDeckSF", "SalePrice")
+
+
+
+lr_model2 <- home_train_vars[,adj_var]
+lr_model2$lSalePrice <- log(lr_model2$SalePrice)
+
+set.seed(4)
+train.index <- sample(c(1:dim(lr_model2)[1]), dim(lr_model2)[1]*0.8)
+lr_model_train2 <- lr_model2[train.index,]
+lr_model_test2 <- lr_model2[-train.index,]
+
+home_reg2 <- lm(lSalePrice ~ . -SalePrice, data = lr_model_train2)
+summary(home_reg2)
+
+
+pred3 <- predict(home_reg2,lr_model_test2,type = "response")
+
+residuals2 <- lr_model_test2$lSalePrice - pred3
+
+home_reg_pred2 <- data.frame("Predicted" = pred3, "Actual" = lr_model_test2$lSalePrice, "Residual" = residuals2)
+
+# returns ME-RMSE-MAE-MPE-MAPE
+accuracy(pred3, lr_model_test2$lSalePrice)
+
+pred4 <- predict(home_reg2, interval = "predict", newdata = lr_model_test2)
+
+RMSE <- sqrt(mean((pred4[,1] - lr_model_test2$lSalePrice)^2))
+RMSE
+
+stargazer(home_reg2, type = 'text')
+
+car::vif(home_reg2)
+
+
+```
