--- a/HousingPricesModelTemplate.Rmd
+++ b/HousingPricesModelTemplate.Rmd
@@ -17,16 +17,38 @@ library(plyr)
 library(ggcorrplot)
 library(gridExtra)
 library(olsrr)
+library(gbm)
+library(mice)
+library(moments)
+library(janitor)
+library(readxl)
+library(GGally)
+library(treemapify)
+library(grid)
+library(scales)
+library(corrplot)
+library(class)
+library(caret)
+library(pROC)
+library(e1071)
+library(kableExtra)
+library(StepReg)
+library(ggthemes)
+library(stargazer)
+library(car)
+library(leaps)
+library(forecast)
 ```
 
 ```{r}
 #AmesHouesingDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv"))
+#AmesHouesingTestDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/test.csv"))
 
 AmesHouesingDataFrame <- read.csv("C:/Users/Joey/Desktop/stat project/AmesHousePricing/train.csv")
-
 AmesHouesingDataFrame_test<-read.csv("C:/Users/Joey/Desktop/house-prices-advanced-regression-techniques/test.csv")
 
 #AmesHouesingDataFrame <- read.csv("C:/Users/nicol/OneDrive/Desktop/train1.csv")
+#AmesHouesingDataFrame <- read.csv("C:/Users/nicol/OneDrive/Desktop/test1.csv")
 ```
 
 ```{r}
@@ -173,156 +195,53 @@ AmesHouesingDataFrame$LandSlopeNum <- as.numeric(factor(AmesHouesingDataFrame$La
 ```
 
 ```{r}
-# library(gbm)
-# library(mice)
-# library(moments)
-# library(ggplot2)
-# library(tidyverse)
-# library(janitor)
-# library(readxl)
-# library(GGally)
-# library(ggplot2)
-# library(treemapify)
-# library(gridExtra)
-# library(grid)
-# library(scales)
-# library(ggcorrplot)
-# library(corrplot)
-# library(class)
-# library(caret)
-# library(pROC)
-# library(e1071)
-# library(kableExtra)
-# library(StepReg)
-# library(ggthemes)
-# library(olsrr)
-# library(stargazer)
-# library(car)
-# library(leaps)
-# library(forecast)
-# AmesHouesingDataFrame <- read.csv("C:/Users/Joey/Desktop/stat project/AmesHousePricing/train.csv", header = TRUE)
-# AmesHouesingDataFrame_test <- read.csv("C:/Users/Joey/Desktop/house-prices-advanced-regression-techniques/test.csv",header = TRUE)
-# 
-# ```
-# 
-# ```{r}
-# 
-# 
-# AmesHouesingDataFrame$LogSalePrice = log(AmesHouesingDataFrame$SalePrice)
-# 
-# AmesHouesingDataFrame$LogX1stFlrSF = log(AmesHouesingDataFrame$X1stFlrSF + 1)
-# AmesHouesingDataFrame$LogX2ndFlrSF = log(AmesHouesingDataFrame$X2ndFlrSF + 1)
-# AmesHouesingDataFrame$LogGrLivArea = log(AmesHouesingDataFrame$GrLivArea + 1)
-# 
-# AmesHouesingDataFrame$LogTotalBsmtSF = log(AmesHouesingDataFrame$TotalBsmtSF + 1)
-# AmesHouesingDataFrame$LogBsmtUnfSF = log(AmesHouesingDataFrame$BsmtUnfSF + 1)
-# 
-# AmesHouesingDataFrame$LogWoodDeckSF = log(AmesHouesingDataFrame$WoodDeckSF + 1)
-# AmesHouesingDataFrame$LogOpenPorchSF = log(AmesHouesingDataFrame$OpenPorchSF + 1)
-# AmesHouesingDataFrame$LogX3SsnPorch = log(AmesHouesingDataFrame$X3SsnPorch + 1)
-# AmesHouesingDataFrame$LogScreenPorch = log(AmesHouesingDataFrame$ScreenPorch + 1)
-# 
-# AmesHouesingDataFrame$LogLotArea = log(AmesHouesingDataFrame$LotArea + 1)
-# AmesHouesingDataFrame$LogLotFrontage = log(AmesHouesingDataFrame$LotFrontage + 1)
-# 
-# AmesHouesingDataFrame$LogPoolArea = log(AmesHouesingDataFrame$PoolArea + 1)
-# 
-# AmesHouesingDataFrame$LogGarageArea = log(AmesHouesingDataFrame$GarageArea + 1)
-# 
-# AmesHouesingDataFrame$LogMasVnrArea = log(AmesHouesingDataFrame$MasVnrArea + 1)
-# 
-# 
-# 
-# names(AmesHouesingDataFrame)
-# # w/o messing around too much with transforms etc. I want to get 
-# # baseline vars together that may have an impact on prices of homes. 
-# home_vars <- c('Id','MSZoning','Utilities', 'Neighborhood','BldgType','HouseStyle',
-#                 'OverallQual','OverallCond','YearBuilt', 'ExterQual','ExterCond',
-#                 'BsmtQual','BsmtCond','TotalBsmtSF','Heating','HeatingQC', 
-#                 'CentralAir','Electrical','BedroomAbvGr','KitchenAbvGr',
-#                 'KitchenQual','TotRmsAbvGrd','Functional','Fireplaces','FireplaceQu',
-#                'GarageArea','GarageQual','GarageCond','OpenPorchSF',#'PoolArea',,'GrLivArea'"LogX1stFlrSF", "LogX2ndFlrSF","LogPoolArea",
-#                 'Fence','MoSold','YrSold','SaleType','SaleCondition','SalePrice',
-#                 "LogGrLivArea","LogTotalBsmtSF",
-#                "LogWoodDeckSF","LogOpenPorchSF","LogX3SsnPorch","LogScreenPorch",
-#                "LogLotArea","LogLotFrontage","LogGarageArea","LogMasVnrArea"
-#                )
-# 
-# # creating the training set
-# home_train_vars <- AmesHouesingDataFrame[,home_vars]
-# 
-# # we do know that sales price needs to be logged... so at least let's get that
-# # in here...
-# home_train_vars$lSalePrice <- log(home_train_vars$SalePrice)
-# 
-# # some factors/vars need to be updated for use in our model/interpertations etc. 
-# home_train_vars$ExterCond2 <- as.numeric(factor(home_train_vars$ExterCond,
-#                                                 levels = c("Ex","Gd","TA","Fa","Po"),
-#                                                 labels = c(5,4,3,2,1), ordered = TRUE))
-# 
-# home_train_vars$HeatingQC2 <- as.numeric(factor(home_train_vars$HeatingQC, 
-#                                   levels = c("Ex", "Gd","TA", "Fa","Po"),
-#                                   labels = c(5,4,3,2,1) ,ordered = TRUE))
-# 
-# home_train_vars$CentralAir2 <- as.numeric(factor(home_train_vars$CentralAir, 
-#                                   levels = c("N", "Y"),
-#                                   labels = c(0,1) ,ordered = TRUE))
-# 
-# 
-# 
-# ```
-
-
+head(AmesHouesingDataFrame)
 ```
 
 ```{r}
-First Model
-```{r}
-
 # bringing in some of the feats for trial in model...
 # still using basic stuff. 
-model_var <- c('SalePrice', 
-                'OverallQual','OverallCond','YearBuilt','ExterCond2',
-                'TotalBsmtSF','HeatingQC2', 
-                'CentralAir2','BedroomAbvGr','KitchenAbvGr',
+model_var = c('LogSalePrice', 
+                'OverallQual','OverallCond','YearBuilt','ExterCondNum',
+                'LogTotalBsmtSF','HeatingQCNum', 
+                'CentralAirNum','BedroomAbvGr','KitchenAbvGr',
                 'TotRmsAbvGrd','Fireplaces',
-                'GarageArea','OpenPorchSF',#'PoolArea','GrLivArea', "LogX1stFlrSF", "LogX2ndFlrSF""LogPoolArea",
-                 'YrSold', "LogGrLivArea","LogTotalBsmtSF",
-               "LogWoodDeckSF","LogOpenPorchSF","LogX3SsnPorch","LogScreenPorch",
-               "LogLotArea","LogLotFrontage","LogGarageArea","LogMasVnrArea"
+                'LogGarageArea','LogOpenPorchSF',
+                 'YrSold', "LogGrLivArea",
+               "LogWoodDeckSF","LogScreenPorch",
+               "LogLotArea","LogMasVnrArea"
                )
 
 
-lr_model <- home_train_vars[,model_var]
-lr_model$lSalePrice <- log(lr_model$SalePrice)
+lr_model <- AmesHouesingDataFrame[,model_var]
 
 set.seed(4)
 train.index <- sample(c(1:dim(lr_model)[1]), dim(lr_model)[1]*0.8)
 lr_model_train <- lr_model[train.index,]
 lr_model_test <- lr_model[-train.index,]
 
-home_regression <- lm(lSalePrice~.-SalePrice, data = lr_model_train)
+home_regression <- lm(LogSalePrice~.-LogSalePrice, data = lr_model_train)
 summary(home_regression)
 
 # note "response" this will give you numerical result min/1stq /median/mean/3rd q/ max/ NA's
 pred1 <- predict(home_regression, lr_model_test, type = "response")
 # summary(pred1)
 
-residuals <- lr_model_test$lSalePrice - pred1
+residuals <- lr_model_test$LogSalePrice - pred1
 
-home_regression_pred <- data.frame("Predicted" = pred1, "Actual" = lr_model_test$lSalePrice, "Residual" = residuals)
+home_regression_pred <- data.frame("Predicted" = pred1, "Actual" = lr_model_test$LogSalePrice, "Residual" = residuals)
 
 # returns ME-RMSE-MAE-MPE-MAPE
-accuracy(pred1, lr_model_test$lSalePrice)
+accuracy(pred1, lr_model_test$LogSalePrice)
 
 
 # note "predict" this returns fit/lwr/upr
 pred2 <- predict(home_regression, interval = "predict", newdata = lr_model_test) 
 # summary(pred2)
 
-stargazer(home_reg, type = 'text')
+stargazer(home_regression, type = 'text')
 
-car::vif(home_reg)
+car::vif(home_regression)
  #comment out so we don't hang up the console with time
 # ols_step_both_p(home_reg, prem = .05, details = TRUE)
 ```
